[gd_scene load_steps=5 format=3 uid="uid://b66eer0eet1j7"]

[ext_resource type="Script" uid="uid://bh26q54udpf1n" path="res://src/hud/hud.gd" id="1_t0re6"]
[ext_resource type="Theme" uid="uid://1n0tuf8ntefx" path="res://src/hitpoints/hitpoints.tres" id="2_3phq6"]
[ext_resource type="Texture2D" uid="uid://d1lp386pdf242" path="res://assets/arrow.png" id="3_ony6l"]

[sub_resource type="LabelSettings" id="LabelSettings_ony6l"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_t0re6")

[node name="PlayerHitpoints" type="ProgressBar" parent="."]
offset_left = 288.0
offset_top = 504.0
offset_right = 672.0
offset_bottom = 544.0
theme = ExtResource("2_3phq6")

[node name="WindDirection" type="Sprite2D" parent="."]
position = Vector2(56, 472)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_ony6l")

[node name="WindSpeed" type="Label" parent="."]
offset_left = 8.0
offset_top = 504.0
offset_right = 104.0
offset_bottom = 544.0
label_settings = SubResource("LabelSettings_ony6l")
horizontal_alignment = 1
vertical_alignment = 1
